--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "dev": "npx tsx watch src/server.ts",
     "lint": "npx eslint .",
     "lint:fix": "npx eslint . --fix",
@@ -37,9 +38,11 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.2.2",
+    "serverless-http": "^3.2.0",
     "uuid": "^10.0.0",
     "winston": "^3.14.2"
   }
