--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,10 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    
+    permissions:
+    id-token: write  # Enable OIDC authentication
+    contents: read
 
     steps:
     - name: Checkout code
