--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,9 +8,9 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
+
     permissions:
-    id-token: write  # Enable OIDC authentication
+    id-token: write
     contents: read
 
     steps:
