--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,10 @@ on:
       - main
 
 jobs:
+  test:
+      name: Test
+      uses: ./.github/workflows/validation.yml
+
   deploy:
     runs-on: ubuntu-latest
 
@@ -15,7 +19,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v3
