--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  vehicle-service-api:
+  vehicle-service-api-lambda:
       build:
         context: .
         dockerfile: Dockerfile
