--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "npx tsx watch src/server.ts",
     "lint": "npx eslint .",
     "lint:fix": "npx eslint . --fix",
+    "script:default_account": "npx tsx scripts/default_account.ts",
+    "script:dynamodb_tables": "npx tsx scripts/dynamodb_tables.ts",
+    "start": "node dist/server.js",
     "test": "jest"
   },
   "keywords": [],
@@ -22,11 +25,13 @@
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.5.1",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "@types/winston": "^2.4.4",
     "eslint": "^9.9.1",
     "globals": "^15.9.0",
     "jest": "^29.7.0",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.3.0"
