--- a/tsconfig.json
+++ b/tsconfig.json
@@ -100,6 +100,7 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
   "exclude": [
-    "__tests__"    
+    "__tests__",
+    "scripts"    
   ]
 }
