--- a/package.json
+++ b/package.json
@@ -39,6 +39,12 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.637.0",
     "@aws-sdk/util-dynamodb": "^3.637.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/instrumentation-express": "^0.44.0",
+    "@opentelemetry/instrumentation-http": "^0.54.2",
+    "@opentelemetry/instrumentation-winston": "^0.41.0",
+    "@opentelemetry/sdk-node": "^0.54.2",
+    "@opentelemetry/sdk-trace-node": "^1.27.0",
     "aws-sdk": "^2.1686.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
